create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1608,6 +1608,10 @@ body {
 .cid-ranDfdexTt .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
+.cid-ranDfdexTt .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-ranDfdexTt .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
 .cid-ranDfdexTt .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-ranDfdexTt .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -1703,6 +1707,10 @@ body {
   .cid-ranDfdexTt .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
   }
+  .cid-ranDfdexTt .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-ranDfdexTt .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
+  }
   .cid-ranDfdexTt .navbar-collapse.collapsing .navbar-buttons,
   .cid-ranDfdexTt .navbar-collapse.show .navbar-buttons {
     text-align: center;
@@ -1768,7 +1776,7 @@ body {
 .cid-rasyhXqipg {
   padding-top: 90px;
   padding-bottom: 90px;
-  background: linear-gradient(45deg, #831767, #fc5a2a);
+  background: linear-gradient(45deg, #441b9f, #861168);
 }
 .cid-rasyhXqipg .mbr-section-subtitle {
   font-style: italic;
@@ -2053,12 +2061,12 @@ body {
 }
 .cid-ranDfdexTt .navbar {
   padding: .5rem 0;
-  background: #717171;
+  background: #cccccc;
   transition: none;
   min-height: 77px;
 }
 .cid-ranDfdexTt .navbar-dropdown.bg-color.transparent.opened {
-  background: #717171;
+  background: #cccccc;
 }
 .cid-ranDfdexTt a {
   font-style: normal;
@@ -2146,7 +2154,7 @@ body {
   padding-bottom: 0;
 }
 .cid-ranDfdexTt .dropdown .dropdown-menu {
-  background: #717171;
+  background: #cccccc;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -2442,12 +2450,12 @@ body {
 }
 .cid-ranDfdexTt .navbar {
   padding: .5rem 0;
-  background: #717171;
+  background: #cccccc;
   transition: none;
   min-height: 77px;
 }
 .cid-ranDfdexTt .navbar-dropdown.bg-color.transparent.opened {
-  background: #717171;
+  background: #cccccc;
 }
 .cid-ranDfdexTt a {
   font-style: normal;
@@ -2535,7 +2543,7 @@ body {
   padding-bottom: 0;
 }
 .cid-ranDfdexTt .dropdown .dropdown-menu {
-  background: #717171;
+  background: #cccccc;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -2831,12 +2839,12 @@ body {
 }
 .cid-ranDfdexTt .navbar {
   padding: .5rem 0;
-  background: #717171;
+  background: #cccccc;
   transition: none;
   min-height: 77px;
 }
 .cid-ranDfdexTt .navbar-dropdown.bg-color.transparent.opened {
-  background: #717171;
+  background: #cccccc;
 }
 .cid-ranDfdexTt a {
   font-style: normal;
@@ -2924,7 +2932,7 @@ body {
   padding-bottom: 0;
 }
 .cid-ranDfdexTt .dropdown .dropdown-menu {
-  background: #717171;
+  background: #cccccc;
   display: none;
   position: absolute;
   min-width: 5rem;
