--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1608,10 +1608,6 @@ body {
 .cid-ranDfdexTt .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
-.cid-ranDfdexTt .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-.cid-ranDfdexTt .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
-  margin-bottom: 1rem;
-}
 .cid-ranDfdexTt .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-ranDfdexTt .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -1706,10 +1702,6 @@ body {
   .cid-ranDfdexTt .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-ranDfdexTt .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
-  }
-  .cid-ranDfdexTt .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-  .cid-ranDfdexTt .navbar-collapse.show .navbar-nav .nav-item:last-child {
-    margin-bottom: 1rem;
   }
   .cid-ranDfdexTt .navbar-collapse.collapsing .navbar-buttons,
   .cid-ranDfdexTt .navbar-collapse.show .navbar-buttons {
@@ -2448,6 +2440,99 @@ body {
 .cid-ranDfdexTt .dropdown-item:hover {
   color: #c1c1c1 !important;
 }
+.cid-rb6mtevz1l {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background: linear-gradient(45deg, #7fd9fc, #441b9f);
+}
+.cid-rb6mw2acrg {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-rb6mw2acrg .mbr-slider .carousel-control {
+  background: #1b1b1b;
+}
+.cid-rb6mw2acrg .mbr-slider .carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-rb6mw2acrg .mbr-slider .carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-rb6mw2acrg .mbr-slider .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-rb6mw2acrg .mbr-gallery-item > div::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #554346;
+  opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+}
+.cid-rb6mw2acrg .mbr-gallery-item > div:hover .mbr-gallery-title::before {
+  background: transparent !important;
+}
+.cid-rb6mw2acrg .mbr-gallery-item > div:hover:before {
+  opacity: 0.7 !important;
+}
+.cid-rb6mw2acrg .mbr-gallery-title {
+  font-size: .9em;
+  position: absolute;
+  display: block;
+  width: 100%;
+  bottom: 0;
+  padding: 1rem;
+  color: #fff;
+  z-index: 2;
+}
+.cid-rb6mw2acrg .mbr-gallery-title:before {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  position: absolute;
+  background: #554346 !important;
+  opacity: 0.7;
+  -webkit-transition: 0.2s background ease-in-out;
+  transition: 0.2s background ease-in-out;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+}
+.cid-rb6mAuO41y {
+  background-image: url("../../../assets/images/03.jpg");
+}
+.cid-rb6mAuO41y .icons-media-container {
+  display: -webkit-flex;
+  justify-content: center;
+  -webkit-justify-content: center;
+  flex-direction: row;
+  -webkit-flex-direction: row;
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-top: 4rem;
+}
+.cid-rb6mAuO41y .icons-media-container .mbr-iconfont {
+  font-size: 96px;
+  color: #ffffff;
+}
+.cid-rb6mAuO41y .icons-media-container .icon-block {
+  padding-bottom: 1rem;
+}
+.cid-rb6mAuO41y .mbr-text {
+  color: #ffffff;
+}
+.cid-rb6mAuO41y .card {
+  padding-bottom: 1.5rem;
+}
 .cid-ranDfdexTt .navbar {
   padding: .5rem 0;
   background: #cccccc;
@@ -2836,6 +2921,401 @@ body {
 .cid-ranDfdexTt .nav-link:hover,
 .cid-ranDfdexTt .dropdown-item:hover {
   color: #c1c1c1 !important;
+}
+.cid-rb6na66N43 {
+  background: linear-gradient(45deg, #1c834a, #441b9f);
+}
+.cid-ranDfdexTt .navbar {
+  padding: .5rem 0;
+  background: #cccccc;
+  transition: none;
+  min-height: 77px;
+}
+.cid-ranDfdexTt .navbar-dropdown.bg-color.transparent.opened {
+  background: #cccccc;
+}
+.cid-ranDfdexTt a {
+  font-style: normal;
+}
+.cid-ranDfdexTt .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  text-decoration: none;
+}
+.cid-ranDfdexTt .nav-item a {
+  display: -webkit-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
+}
+.cid-ranDfdexTt .nav-item:focus,
+.cid-ranDfdexTt .nav-link:focus {
+  outline: none;
+}
+.cid-ranDfdexTt .btn {
+  padding: 0.4rem 1.5rem;
+  display: -webkit-inline-flex;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-ranDfdexTt .btn .mbr-iconfont {
+  font-size: 1.6rem;
+}
+.cid-ranDfdexTt .menu-logo {
+  margin-right: auto;
+}
+.cid-ranDfdexTt .menu-logo .navbar-brand {
+  display: -webkit-flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-ranDfdexTt .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: -webkit-flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-ranDfdexTt .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-ranDfdexTt .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-ranDfdexTt .menu-logo .navbar-brand .navbar-logo img {
+  display: -webkit-flex;
+}
+.cid-ranDfdexTt .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-ranDfdexTt .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-ranDfdexTt .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-ranDfdexTt .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-ranDfdexTt .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-ranDfdexTt .dropdown .dropdown-menu {
+  background: #cccccc;
+  display: none;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  text-align: left;
+}
+.cid-ranDfdexTt .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-ranDfdexTt .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-ranDfdexTt .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-ranDfdexTt .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-ranDfdexTt .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-ranDfdexTt .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-ranDfdexTt .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-ranDfdexTt .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-ranDfdexTt .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-ranDfdexTt .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-ranDfdexTt .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-ranDfdexTt button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-ranDfdexTt button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-ranDfdexTt button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #ffffff;
+}
+.cid-ranDfdexTt button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-ranDfdexTt button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-ranDfdexTt button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-ranDfdexTt button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-ranDfdexTt nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-ranDfdexTt nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-ranDfdexTt nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-ranDfdexTt nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-ranDfdexTt .collapsed.navbar-expand {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-ranDfdexTt .collapsed .btn {
+  display: -webkit-flex;
+}
+.cid-ranDfdexTt .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-ranDfdexTt .collapsed .navbar-collapse.collapsing,
+.cid-ranDfdexTt .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-ranDfdexTt .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-ranDfdexTt .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
+  text-align: center;
+}
+.cid-ranDfdexTt .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-ranDfdexTt .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-ranDfdexTt .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-ranDfdexTt .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
+}
+.cid-ranDfdexTt .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-ranDfdexTt .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+.cid-ranDfdexTt .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-ranDfdexTt .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+}
+.cid-ranDfdexTt .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-ranDfdexTt .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-ranDfdexTt .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-ranDfdexTt .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-ranDfdexTt .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
+}
+@media (max-width: 991px) {
+  .cid-ranDfdexTt .navbar-expand {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-ranDfdexTt img {
+    height: 3.8rem !important;
+  }
+  .cid-ranDfdexTt .btn {
+    display: -webkit-flex;
+  }
+  .cid-ranDfdexTt button.navbar-toggler {
+    display: block;
+  }
+  .cid-ranDfdexTt .navbar-brand {
+    margin-left: 1rem !important;
+  }
+  .cid-ranDfdexTt .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-ranDfdexTt .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-ranDfdexTt .navbar-collapse.collapsing,
+  .cid-ranDfdexTt .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-ranDfdexTt .navbar-collapse.collapsing .navbar-nav,
+  .cid-ranDfdexTt .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-ranDfdexTt .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-ranDfdexTt .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-ranDfdexTt .navbar-collapse.collapsing .navbar-buttons,
+  .cid-ranDfdexTt .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-ranDfdexTt .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-ranDfdexTt .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-ranDfdexTt .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-ranDfdexTt .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-ranDfdexTt .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-ranDfdexTt .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+@media (min-width: 767px) {
+  .cid-ranDfdexTt .menu-logo {
+    flex-shrink: 0;
+    -webkit-flex-shrink: 0;
+  }
+}
+.cid-ranDfdexTt .navbar-collapse {
+  flex-basis: auto;
+  -webkit-flex-basis: auto;
+}
+.cid-ranDfdexTt .nav-link:hover,
+.cid-ranDfdexTt .dropdown-item:hover {
+  color: #c1c1c1 !important;
+}
+.cid-rb6nttPFGv {
+  background: linear-gradient(45deg, #fc5a2a, #441b9f);
 }
 .cid-ranDfdexTt .navbar {
   padding: .5rem 0;
