create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2947,7 +2947,192 @@ body {
   color: #c1c1c1 !important;
 }
 .cid-rb6na66N43 {
+  padding-top: 90px;
+  padding-bottom: 90px;
   background: linear-gradient(45deg, #1c834a, #441b9f);
+}
+.cid-rb85wLNeiB {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-rb85wLNeiB .mbr-slider .carousel-control {
+  background: #1b1b1b;
+}
+.cid-rb85wLNeiB .mbr-slider .carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-rb85wLNeiB .mbr-slider .carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-rb85wLNeiB .mbr-slider .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-rb85wLNeiB .mbr-gallery-item > div::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #554346;
+  opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+}
+.cid-rb85wLNeiB .mbr-gallery-item > div:hover .mbr-gallery-title::before {
+  background: transparent !important;
+}
+.cid-rb85wLNeiB .mbr-gallery-item > div:hover:before {
+  opacity: 0.7 !important;
+}
+.cid-rb85wLNeiB .mbr-gallery-title {
+  font-size: .9em;
+  position: absolute;
+  display: block;
+  width: 100%;
+  bottom: 0;
+  padding: 1rem;
+  color: #fff;
+  z-index: 2;
+}
+.cid-rb85wLNeiB .mbr-gallery-title:before {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  position: absolute;
+  background: #554346 !important;
+  opacity: 0.7;
+  -webkit-transition: 0.2s background ease-in-out;
+  transition: 0.2s background ease-in-out;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+}
+.cid-rb86eZqnBk {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #1c834a;
+}
+@media (min-width: 992px) {
+  .cid-rb86eZqnBk .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 992px) {
+  .cid-rb86eZqnBk .mbr-figure {
+    padding-bottom: 1rem;
+  }
+}
+.cid-rb86eZqnBk .mbr-text {
+  color: #ffffff;
+}
+.cid-rb86fQEsKP {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #1c834a;
+}
+@media (min-width: 992px) {
+  .cid-rb86fQEsKP .mbr-figure {
+    padding-left: 4rem;
+  }
+}
+@media (max-width: 992px) {
+  .cid-rb86fQEsKP .mbr-figure {
+    padding-top: 1rem;
+  }
+}
+.cid-rb86fQEsKP .mbr-text {
+  color: #ffffff;
+}
+.cid-rb871OZRFl {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #2e2e2e;
+}
+@media (max-width: 767px) {
+  .cid-rb871OZRFl .content {
+    text-align: center;
+  }
+  .cid-rb871OZRFl .content > div:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+}
+.cid-rb871OZRFl .map {
+  height: 18.75rem;
+}
+@media (max-width: 767px) {
+  .cid-rb871OZRFl .footer-lower .copyright {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+}
+.cid-rb871OZRFl .footer-lower hr {
+  margin: 1rem 0;
+  border-color: #fff;
+  opacity: .05;
+}
+.cid-rb871OZRFl .footer-lower .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: -webkit-flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  -webkit-flex-wrap: wrap;
+}
+.cid-rb871OZRFl .footer-lower .social-list .mbr-iconfont-social {
+  font-size: 1.3rem;
+  color: #fff;
+}
+.cid-rb871OZRFl .footer-lower .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-rb871OZRFl .footer-lower .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-rb871OZRFl .footer-lower .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-rb871OZRFl .footer-lower .social-list {
+    justify-content: center;
+    -webkit-justify-content: center;
+  }
+}
+.cid-rb871OZRFl .google-map {
+  height: 25rem;
+  position: relative;
+}
+.cid-rb871OZRFl .google-map iframe {
+  height: 100%;
+  width: 100%;
+}
+.cid-rb871OZRFl .google-map [data-state-details] {
+  color: #6b6763;
+  font-family: Montserrat;
+  height: 1.5em;
+  margin-top: -0.75em;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  width: 100%;
+}
+.cid-rb871OZRFl .google-map[data-state] {
+  background: #e9e5dc;
+}
+.cid-rb871OZRFl .google-map[data-state="loading"] [data-state-details] {
+  display: none;
 }
 .cid-ranDfdexTt .navbar {
   padding: .5rem 0;
